Bug 171746 - Dimension Line dialog: preview overflows when decimal places exceed 7 decimal places
Summary: Dimension Line dialog: preview overflows when decimal places exceed 7 decimal...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.8.0 target:26.2.4
Keywords:
Depends on:
Blocks: Shapes-Line
  Show dependency treegraph
 
Reported: 2026-04-14 06:14 UTC by Andreas Heinisch
Modified: 2026-04-16 15:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Dimensione line dialog preview overflow (27.93 KB, image/png)
2026-04-14 06:15 UTC, Andreas Heinisch
Details
AOO Bugzilla - Issue 128487 (108.58 KB, application/pdf)
2026-04-14 10:40 UTC, nutka
Details
Attachment to AOO Bugzilla Issue 128487 (10.60 KB, application/vnd.oasis.opendocument.graphics)
2026-04-14 10:41 UTC, nutka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2026-04-14 06:14:40 UTC
Description:
In the Dimension Line dialog, setting the number of decimal places above 7 causes the measurement preview to overflow its display area.

Steps to Reproduce:
1. Open Draw
2. In the left toolbar, open the "Lines and Arrows" panel
3. Choose "Dimension Line"
4. Draw any dimension line in the workspace
5. Select the inserted dimension line
6. Right-click the object and choose "Dimensions..." from the context menu
7. In the dialog, increase the "Decimal places" value beyond 7

Actual Results:
When the number of decimal places is increased beyond 7, the measurement text in the preview area shows an overflows its value and shows -21.47483648

Expected Results:
The preview should properly handle higher numbers of decimal places without overflowing by limiting the maximum number of visible decimal places.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: cb6edc8aaefcb20b0e0f98a55111a43a1d63578f
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Andreas Heinisch 2026-04-14 06:15:24 UTC
Created attachment 206668 [details]
Dimensione line dialog preview overflow
Comment 2 nutka 2026-04-14 09:17:29 UTC
Already occuring in LibreOffice 3.3.0.4. Inherited from OOo?
( cf. Issue 128487 - "Dimension line - numerical artefact"
https://bz.apache.org/ooo/show_bug.cgi?id=128487 )
Comment 3 Andreas Heinisch 2026-04-14 10:02:40 UTC
(In reply to nutka from comment #2)
> Already occuring in LibreOffice 3.3.0.4. Inherited from OOo?
> ( cf. Issue 128487 - "Dimension line - numerical artefact"
> https://bz.apache.org/ooo/show_bug.cgi?id=128487 )

Unfortunately, I cannot access the link since Apache prevents the scraping and I could not figure out any new registration to the site.
Comment 4 nutka 2026-04-14 10:38:47 UTC
My bad!
Please find attached relevant files: .pdf and .odg
Comment 5 nutka 2026-04-14 10:40:02 UTC
Created attachment 206673 [details]
AOO Bugzilla - Issue 128487
Comment 6 nutka 2026-04-14 10:41:09 UTC
Created attachment 206674 [details]
Attachment to AOO Bugzilla Issue 128487
Comment 7 Andreas Heinisch 2026-04-14 10:55:31 UTC
Thank you very much!
Comment 8 Commit Notification 2026-04-16 06:22:15 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a124dd41f2bbe62f60ff93a620f61a56516e385

tdf#171746 - Limit number of decimal places to prevent numeric overflow

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-04-16 15:51:34 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/8c171a205cec514936a03daba6082135cfe6a8b3

tdf#171746 - Limit number of decimal places to prevent numeric overflow

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.