tdf#171746 - Limit number of decimal places to prevent numeric overflow

In the dimension lines tab page, limit number of decimal places to
prevent numeric overflow in the preview image.

Change-Id: I0205e045d6baa84e7419f7d90e17f44f8290ba7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/203603
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 7a124dd41f2bbe62f60ff93a620f61a56516e385)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/203724
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>